# StackLab

./: CMakeLists.txt  README.md  info.txt
.github/workflows/: build.yml
gtest/: CMakeLists.txt
include/: stack.h
src/: main.cpp
test/: test_stack.cpp
